syntax = "proto3";

package service;

option go_package = "./service;service";

import "google/protobuf/timestamp.proto";
import "protoc-gen-validate/validate.proto";

//商品类型
message ProdModel {
  int32 prod_id = 1;
  string prod_name = 2;
  float prod_price = 3;
}

//主订单类型
message OrderMain {
  int32 order_id = 1; // 订单id 数字自增
  string order_no = 2; // 订单号
  int32 user_id = 3; // 用户id
  float order_money = 4[(validate.rules).float.gt = 99]; // 订单金额
  google.protobuf.Timestamp order_time = 5; // 订单时间
  repeated OrderDetail details = 6;
}

//子订单类型
message OrderDetail {
  string order_no = 1; // 订单号
  int32 detail_id = 2; // 子订单id
}

//用户积分
message UserScore {
  int32 user_id = 1;
  int32 score = 2;
}